--- a/skills.html
+++ b/skills.html
@@ -137,7 +137,7 @@
     <section id="skill1" style="background-image: linear-gradient(grey, rgb(0, 0, 0));padding-bottom:3% ;">
         <div class="row">
             <div class="col-lg-6">
-                <h1 class="BigHeading skill1heading">Microcontrollers</h1>
+                <h1 class="BigHeading skill1heading">Controllers</h1>
                 <ul>
                 <li class="bio skill1bio" style="margin-bottom:0px; line-height: 1;"><p>Arduino (UNO, Mega)</p></li>
                 <li class="bio skill1bio" style="margin-bottom:0px; line-height: 1;"><p>ESP8266</p></li>
